<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:paddingTop="50dp"
              android:paddingRight="35dp"
              android:paddingBottom="35dp"
              android:paddingLeft="35dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/purchaseMeditationMessage"
        android:id="@+id/purchaseText"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textIsSelectable="false"
        android:textColor="#ff000000"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/purchaseButton"
        android:layout_gravity="center_horizontal"
        android:text="@string/purchaseButton"
        android:layout_margin="10dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restorePurchaseButton"
        android:id="@+id/restorePurchaseButton"
        android:layout_gravity="center_horizontal"
        />
</LinearLayout>