<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#41300000"
    android:weightSum="1">

    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/remindersManagerCloseButton"
        android:background="@drawable/main_drawer_button_background"
        android:src="@drawable/x"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:onClick="onClick"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reminderTitle"
        android:id="@+id/textView6"
        android:layout_gravity="center_horizontal"
        style="@style/TitleTextStyle"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_margin="10dp"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/langSettSeparator1"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/drawer_separator"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_margin="10dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:id="@+id/linearLayout9"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/min1R"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:id="@+id/textView19"
                android:textStyle="bold"
                android:textSize="40sp"
                android:textColor="#ff000000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minute"
                android:id="@+id/textView20"
                android:textColor="#ff000000"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:id="@+id/min5R"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5"
                android:id="@+id/textView21"
                android:textStyle="bold"
                android:textSize="40sp"
                android:textColor="#ff000000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minute"
                android:id="@+id/textView22"
                android:textColor="#ff000000"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:id="@+id/min10R"
            android:nestedScrollingEnabled="false">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10"
                android:id="@+id/textView23"
                android:textColor="#ff000000"
                android:textStyle="bold"
                android:textSize="40sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minute"
                android:id="@+id/textView24"
                android:textColor="#ff000000"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:id="@+id/min20R"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="20"
                android:id="@+id/textView25"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="40sp"
                android:textColor="#ff000000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minute"
                android:id="@+id/textView26"
                android:layout_gravity="center_horizontal"
                android:textColor="#ff000000"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:id="@+id/kidsR"
            >

            <ImageView
                android:layout_width="44dp"
                android:layout_height="46dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/imageView5"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/smiley_noon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kids"
                android:id="@+id/textView27"
                android:layout_gravity="center_horizontal"
                android:textColor="#ff000000"/>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView7"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/drawer_separator"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whichDays"
        android:id="@+id/textView28"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:textSize="24dp"
        android:textColor="#ff000000"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:id="@+id/day1"
            android:text="@string/day1"
            android:background="@drawable/main_drawer_button_background"
            android:layout_weight="1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:id="@+id/day2"
            android:layout_weight="1"
            android:text="@string/day2"
            android:background="@drawable/main_drawer_button_background"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:id="@+id/day3"
            android:layout_weight="1"
            android:text="@string/day3"
            android:background="@drawable/main_drawer_button_background"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:id="@+id/day4"
            android:layout_weight="1"
            android:text="@string/day4"
            android:background="@drawable/main_drawer_button_background"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:id="@+id/day5"
            android:layout_weight="1"
            android:text="@string/day5"
            android:background="@drawable/main_drawer_button_background"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:id="@+id/day6"
            android:layout_weight="1"
            android:text="@string/day6"
            android:background="@drawable/main_drawer_button_background"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:id="@+id/day7"
            android:layout_weight="1"
            android:text="@string/day7"
            android:background="@drawable/main_drawer_button_background"/>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView8"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/drawer_separator"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whatTime"
        android:id="@+id/textView29"
        android:layout_gravity="center_horizontal"
        android:textSize="24sp"
        android:textColor="#ff000000"
        android:layout_margin="10dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:id="@+id/remindersTimePickerButton"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/main_drawer_chosen_button_background"
        android:text="Time"
        />

</LinearLayout>