<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:id="@+id/mainRelativeLayout"
    android:onClick="onClick">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:id="@+id/closeButton"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:id="@+id/mainBackButtonSunImage"
                android:src="@drawable/general_sun_noon"
                android:minHeight="100dp"
                android:clickable="false"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/backButtonLabel"
                android:id="@+id/textView17"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:id="@+id/mainSunImage"
            android:focusableInTouchMode="false"
            android:scaleType="fitCenter"
            android:layout_alignBottom="@+id/mainScreenLogo"
            android:layout_alignLeft="@+id/mainScreenLogo"
            android:layout_alignStart="@+id/mainScreenLogo"/>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="125dp"
            android:id="@+id/mainScreenLogo"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/general_logo"
            android:onClick="onClick"
            android:focusableInTouchMode="false"
            android:scaleType="fitCenter"
            android:layout_below="@+id/closeButton"
            android:layout_centerHorizontal="true"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:id="@+id/linearLayout3"
            android:gravity="center"
            android:layout_above="@+id/meditationSettingsButton"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="25dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/min1"
                android:gravity="center"
                android:onClick="onClick">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:id="@+id/textView9"
                    android:textStyle="bold"
                    android:textSize="40dp"
                    android:textColor="#ffffffff"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minute"
                    android:id="@+id/textView10" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:id="@+id/min5"
                android:onClick="onClick">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5"
                    android:id="@+id/textView11"
                    android:textStyle="bold"
                    android:textSize="40dp"
                    android:textColor="#ffffffff"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minute"
                    android:id="@+id/textView12" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:id="@+id/min10"
                android:onClick="onClick">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10"
                    android:id="@+id/textView13"
                    android:textColor="#ffffffff"
                    android:textStyle="bold"
                    android:textSize="40dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minute"
                    android:id="@+id/textView14" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:id="@+id/min20"
                android:onClick="onClick">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="20"
                    android:id="@+id/textView15"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="bold"
                    android:textSize="40dp"
                    android:textColor="#ffffffff"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minute"
                    android:id="@+id/textView16"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:id="@+id/kids"
                android:onClick="onClick">

                <ImageView
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/kidImageView"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/general_smiley_noon"
                    android:layout_marginBottom="4dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kids"
                    android:id="@+id/textView18"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#fffd8401"/>
            </LinearLayout>

        </LinearLayout>

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/meditationSettingsButton"
            android:onClick="onClick"
            android:background="@drawable/general_sett_bar_handler"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"/>

        <ViewFlipper
            android:id="@+id/settingsFlipper"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

        </ViewFlipper>

</RelativeLayout>